# offtech-ctf

./: .gitignore  .rsyncignore  Makefile  README.md  install.sh  pyproject.toml  red-conf.toml
blue/: analyze_pcap.py  capture.sh  iptables_filters.sh  server_conf.sh  server_installer.sh  sysctl_configuration.sh
blue/templates/: http.html  index.html  ip.html
red/: __main__.py  config.py  install.sh  legitimate.py
red/attacks/: __init__.py  asd.py  http_flood.py  icmp_flood.py  ping_of_death.py  rate_limit.py  rst.py  shut_up.py  syn_flood.py  time_moves_slow.py  time_moves_spoof.py
red/utils/: __init__.py  std_packets.py
