[tool.poetry]
name = "red"
version = "0.0.0"
description = ""
authors = ["Group 3"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
scapy = "^2.4.5"
requests = "^2.28.1"

[tool.poetry.group.dev.dependencies]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
